--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ExpenseManagerApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="expense_category">Expense Category</string>
+    <string name="income_category">Income Category</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
